--- a/css/times.css
+++ b/css/times.css
@@ -8,34 +8,75 @@
 html{
     font-size: 16px;
     line-height: 1.6;
+    font-family: roboto,"Times New Roman", sans-serif;
     /*font-family: font stack required for body text */
 }
 h1, h2, h3, h4{
+    font-family: Spectral,"playfair display",serif;
+    padding:10px;
+    padding-left:30px;
+    font-size: 1.999em;
     /*font-family: font stack required for headings */
 }
 p{
-    
+    margin:10px;
+    padding-left:20px;
 }
 .container{
+    max-width: 1500px;
+    
+    
     
 }
 .subnav{
-    
+    background-color:hsl(195, 30%, 40%); 
+    display:flex;
+    align-content: flex-end;
+    flex-direction: row;
+    justify-content: flex-end;
 }
 .subnav a{
+    padding: 20px;
+    color:hsl(100,100%,100%);
+   
+ 
     
 }
 .mainnav{
+    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-weight: 700;
+    width: 100%;
+
+   
+    
+ 
     
 }
 .mainnav a{
+    display:inline-flex;
+    position:relative;
+    width: 24%;
+  
+    border-bottom-style: solid;
+    border-color:hsl(195, 30%, 40%);
+    Border-width:5px;
+    padding:10px;
+    
+    color: hsl(197, 16%, 19%);
+    text-decoration: none;
+
+    
+    
     
 }
 .masthead{
     
 }
 .times-logo{
-    
+   width:100%; 
+
 }
 .masthead h1{
     
@@ -44,22 +85,29 @@ p{
     
 }
 .content .story{
-    
+   
 }
 .story.lead-story{
+    font-size:1.414em;
     
 }
 h1.story-title{
-    
+   
 }
+
 .story img{
-    
+    float: left;
+    padding-left:10px;
+    padding-right:20px;
+    width: 15em;
+    height: 12em;
 }
 .story p{
     
 }
 .story blockquote{
-    quotes: "\201E" "\201D";
+    padding-left: 60px;
+    font-style: italic;
 }
 .story blockquote::before{
     content: open-quote;
@@ -77,8 +125,19 @@ p.byline span.pub{
     
 }
 .foot{
-    
+    padding:20px;
 }
 .foot p{
+  
+}
+
+
+@media screen and (max-width: 600px){
+    body{
+        background-color:hsl(195, 30%, 40%);
+        float:none;
+        width:100%;
+        font-size:0.707em;
+    }
     
 }
